# covergen

./: .gitignore  README.md  covergen.cabal  stack.yaml
app/: Main.hs
src/: CoverGen.hs
test/: CoverGenSpec.hs
