name:                covergen
version:             0.1.0.0
synopsis:            Generate cover for the "Chora 0" zine.
description:         Please see README.md
homepage:            https://github.com/corajr/covergen#readme
license:             BSD3
license-file:        LICENSE
author:              Cora Johnson-Roberson
maintainer:          me@corajr.com
copyright:           2016 Cora Johnson-Roberson
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     CoverGen
  build-depends:       base >= 4.7 && < 5
                     , diagrams
                     , diagrams-lib
                     , diagrams-svg
  default-language:    Haskell2010

executable covergen
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , covergen
  default-language:    Haskell2010

test-suite covergen-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , covergen
                     , hspec
                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/corajr/covergen
